# proactive-agents

./: .gitignore  README.md  pyproject.toml
src/: receiver.py  sender.py
src/consumers/: __init__.py  base.py  reconnecting.py
